; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_update-index.c_read_head_pointers.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_update-index.c_read_head_pointers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@head_oid = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [34 x i8] c"No HEAD -- no initial commit yet?\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"MERGE_HEAD\00", align 1
@merge_head_oid = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [31 x i8] c"Not in the middle of a merge.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @read_head_pointers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_head_pointers() #0 {
  %1 = call i64 @read_ref(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* @head_oid)
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @die(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0))
  br label %5

5:                                                ; preds = %3, %0
  %6 = call i64 @read_ref(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i32* @merge_head_oid)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %5
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0))
  %11 = call i32 @exit(i32 0) #3
  unreachable

12:                                               ; preds = %5
  ret void
}

declare dso_local i64 @read_ref(i8*, i32*) #1

declare dso_local i32 @die(i8*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
